fix(VAvatar): ensure text is always aligned properly

--- a/packages/vuetify/src/components/VAvatar/VAvatar.sass
+++ b/packages/vuetify/src/components/VAvatar/VAvatar.sass
@@ -5,6 +5,7 @@
   border-radius: 50%
   display: inline-flex
   justify-content: center
+  line-height: normal
   position: relative
   text-align: center
   vertical-align: middle
